# chub-guard

./: .gitignore  .pre-commit-config.yaml  CONVERSATION_CONTEXT.md  README.md  SYSTEM_CHANGES.md  SYSTEM_OVERVIEW.md  TestJava.java  chub_guard_report.md  comparison.md  demo.sh  deprecations.json  fix_mojibake.py  flow.md  pyproject.toml  stderr.txt  stdout.txt  test_js_gaps.js  test_py_gaps.py  vsc_flow.md
.chub-docs/: angular__core__js.md  antd__antd__js.md  gemini__genai.md  historical_deprecations.json  react__react__js.md  registry.json
.chub-docs/airtable__database__full.md/: DOC.md
.github/workflows/: chub-guard.yml
cli/: README.md  pyproject.toml
cli/chub_guard_init/: main.py
cli/chub_guard_init/assets/: .pre-commit-config.yaml  chub_guard.py  registry.json
init/: README.md  package.json
init/assets/: chub_guard.py
init/scripts/: prepack.js
init/src/: index.js
scripts/: check_versions.py  chub_guard.py
tests/: test_app.js  test_app.py  test_app.ts  test_c.c  test_chub_guard.py  test_cpp.cpp  test_java.java  test_js_libs.js  test_mixed_frameworks.jsx  test_pip.js  test_react.jsx  test_react_node.jsx  test_registry_node.jsx  test_registry_py.py  test_registry_react.js
vscode-chub-guard/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-chub-guard/.chub-docs/: airtable__database__js.md  google__access-context-manager.md  historical_deprecations.json  openai__package.md
vscode-chub-guard/scripts/: chub_guard.py
vscode-chub-guard/src/: diagnostics.ts  extension.ts  hookManager.ts  panel.ts  runner.ts
(+2 files in other folders)
